--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,21 +2,24 @@
 # DATABASE
 # ===============================
  
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=dbBanHang
-spring.datasource.username=sa
-spring.datasource.password=12345
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3307/banhang?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
  
  
 # ===============================
 # JPA / HIBERNATE
 # ===============================
-
-spring.jpa.show-sql=true
+#
+#spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-#================================
+##================================
 # CONFIG 
 #================================
 spring.resources.chain.strategy.content.enabled=true
